Fixed radio button alignment for other settings tabs as well (#1571)

--- a/src/components/ChatApp/Settings/Settings.css
+++ b/src/components/ChatApp/Settings/Settings.css
@@ -210,7 +210,7 @@
 }
 
 @media screen and (max-width: 500px) {
-  .speechSettingDiv {
+  .reduceSettingDiv {
     width: 70%;
   }
 }
